fix(BlogLayout): add bottom empty space to prevent scroll up button covering content

--- a/src/components/layouts/BlogLayout.module.scss
+++ b/src/components/layouts/BlogLayout.module.scss
@@ -1,8 +1,11 @@
 @use '../../styles/queries';
 
-.Content {
+/* Increasing specificity to override global styles */
+.Content.Content {
   position: relative;
   max-width: 52rem;
+
+  padding-bottom: var(--gap-insanely-large);
 }
 
 .ScrollUpContainer {
